--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="cs_red">#971313</color>
+    <color name="cs_shadow_red">#D51C1C</color>
+    <color name="cs_shadow_green">#21D124</color>
+    <color name="cs_stroke_tint">#E4CF15</color>
 </resources>
