--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,12 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <!-- ChipChoice theme. -->
+    <style name="Theme.ChipChoice" parent="@style/ChipChoice">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="chipStrokeWidth">2dp</item>
+        <item name="android:textSize">17sp</item>
+    </style>
 </resources>
